--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/59013-64-07/Downloads/junit-jupiter-api-5.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/59013-64-07/Env/lib/junit-jupiter-api-5.3.2.jar"/>
 	<classpathentry kind="output" path="out/production/MagiWorld"/>
 </classpath>
